<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
      android:id="@+id/profileCreateTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/profiles_create_title"
      android:textSize="24sp"
      android:textStyle="bold" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/profiles_ask_name"
      android:textSize="18sp"
      android:textStyle="bold" />

    <EditText
      android:id="@+id/profileCreationEditName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:ems="10"
      android:hint="@string/profiles_name_field"
      android:imeOptions="actionDone"
      android:inputType="textPersonName|textCapWords"
      android:text="" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/profiles_ask_gender"
      android:textSize="18sp"
      android:textStyle="bold" />

    <RelativeLayout
      android:id="@+id/profileGenderLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="16dp">

      <RadioGroup
        android:id="@+id/profileGenderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
          android:id="@+id/profileGenderFemaleRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/profiles_gender_female" />

        <RadioButton
          android:id="@+id/profileGenderMaleRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/profiles_gender_male" />

        <RadioButton
          android:id="@+id/profileGenderNonBinaryRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/profiles_gender_other" />
      </RadioGroup>

      <EditText
        android:id="@+id/profileGenderNonBinaryEditText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profileGenderRadioGroup"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-8dp"
        android:layout_toRightOf="@+id/profileGenderRadioGroup"
        android:hint=""
        android:imeOptions="actionDone"
        android:inputType="textPersonName|textCapWords"
        android:maxLength="32" />
    </RelativeLayout>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/profiles_ask_birth"
      android:textSize="18sp"
      android:textStyle="bold" />

    <org.nypl.simplified.datepicker.DatePicker
      android:id="@+id/profileCreationDateSelection"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="16dp" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/profiles_ask_role"
      android:textSize="18sp"
      android:textStyle="bold" />

    <RelativeLayout
      android:id="@+id/profileRoleLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="16dp">

      <RadioGroup
        android:id="@+id/profileRoleRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
          android:id="@+id/profileRoleParetRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/profiles_role_parent" />

        <RadioButton
          android:id="@+id/profileRoleTeacherRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/profiles_role_teacher" />

        <RadioButton
          android:id="@+id/profileRoleStudentRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/profiles_role_student" />

        <RadioButton
          android:id="@+id/profileRoleOtherRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/profiles_role_other" />
      </RadioGroup>

      <EditText
        android:id="@+id/profileRoleEditText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profileRoleRadioGroup"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/profileRoleRadioGroup"
        android:layout_marginBottom="-8dp"
        android:hint=""
        android:imeOptions="actionDone"
        android:inputType="textPersonName|textCapWords"
        android:maxLength="32" />
    </RelativeLayout>

    <LinearLayout
      android:id="@+id/profilePilotSchool"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/profiles_ask_pilot_school"
        android:textSize="18sp"
        android:textStyle="bold" />

      <RadioGroup
        android:id="@+id/profilePilotSchoolRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">
        <RadioButton
          android:id="@+id/profilePilotSchoolNoRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/profiles_pilot_no" />

        <RadioButton
          android:id="@+id/profilePilotSchoolYesRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/profiles_pilot_yes" />
      </RadioGroup>

      <Spinner
        android:id="@+id/profilePilotSchoolYesSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/lfaPilotSchools" />
    </LinearLayout>

    <Button
      android:id="@+id/profileCreationCreate"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:layout_marginBottom="32dp"
      android:layout_marginTop="32dp"
      android:layout_gravity="center"
      android:text="@string/profiles_create" />

  </LinearLayout>

</ScrollView>